--- a/pistolamejorada.html
+++ b/pistolamejorada.html
@@ -235,7 +235,7 @@
         
         <button class="btn" id="musicBtn">🎵 Activar Música</button>
         <audio id="birthdaySong" loop>
-            <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+            <source src="https://www.youtube.com/watch?v=1Nr_tqkMsJs" type="audio/mpeg">
             Tu navegador no soporta audio HTML5.
         </audio>
     </div>
